2015-09-10  Andy Buckley  <andy.buckley@cern.ch>

	* Use weight file parsing in prof-ipol.

	* Add prof.weights submodule, with a copy of PointMatcher and a
	new read_pointmatchers function for handling weight files.

	* Provide __version__attribute in the Python module.

	* User script CLI consistency, simplification, general smoothing...

2015-08-30  Andy Buckley  <andy.buckley@cern.ch>

	* Add recursive scangrid generator function, and other tweaks.

2015-08-18  Andy Buckley  <andy.buckley@cern.ch>

	* Tweaks to ipol file parsing functions.

	* Fix a bug in IpolBin's use of interpolated errors.

	* Convert mean and median error parameterisation to use new 0th order ipols.

2015-08-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* A first version of catching singular matrices in the SVD

	* Ipol has 1 additional argument, "threshold", that determines what
	singular values are considered 0, fully propagated to pyext

	* Going 2 Pro 2 Fessional

	* Some startup checks of prof- scripts

	* remove bin/prof-sampling, rename prof-prediction -> prof-predict

2015-08-13  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Reverted unintended commit of hack.

	* Added very basic prof-config script to bin

	* Update PATH when sourcing setup.sh

2015-08-12  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Added prof-prediction which reads in a ifile and a point in
	parameter space (either a text file, a comma separated list or just
	the args) and writes out an ipolhisto. Tested to work.

2015-08-03  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Added 0-order polynomials, i.e. constant values.
	Currently, the coefficent is simply the value of
	the first anochorpoint.

2015-07-15  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Some pull plotting functionality

2015-07-08  Holger Schulz  <holger.schulz@durham.ac.uk>

	* Calculate and print G.o.f.

	* Write some meta info to results

	* Read limits, fixed params from single textfile --limits

	* Output files steered by --output