@@ -7,13 +7,14 @@ Use the interpolations stored in <ipolfile> to find optimised parameters with
 the reference histograms found in the <refdir> as the optimisation target.
 
 TODO:
- * Handle weight files/args
  * Handle run combination file/string (write a hash of the run list into the ipol filename?)
 """
 
 import optparse
 op = optparse.OptionParser(usage=__doc__)
-op.add_option("--output", dest="OUTPUT", default="tuned", help="Prefix for outputs (default: %default)")
+op.add_option("--wfile", dest="WFILE", default=None, help="Path to a weight file to specify unequal chi2 weights of each bin in the fit (default: %default)")
+op.add_option("--output", dest="OUTPUT", default="tunes", help="Prefix for outputs (default: %default)")
+# TODO: ipol fit limits are in the ipol datfile... automatically use them / warn if result is outside?
 op.add_option("--limits", dest="LIMITS", default=None, help="Simple text file with parameter limits and fixed parameters")
 # TODO: Really a core feature? Define "pull". REMOVE
 # op.add_option("--pulls", dest="PULLS", action="store_true", default=False, help="Output pull histograms after minimisation")
@@ -36,79 +37,90 @@ if len(args) == 2:
 
 
 ## Read persisted interpolations to re-create the ipol Histos
-metadata = prof.read_meta(IFILE)
-if not metadata["DataFormat"] == 'binned':
-    print "Error, DataFormat of tuning input is not binned, exiting"
-    import sys
-    sys.exit(1)
-
-## Read in ipol histos
-IHISTOS = prof.read_binnedipol(IFILE)
+metadata, IHISTOS = prof.read_ipolhistos(IFILE)
 
 ## List of rivet analysis paths in IHISTOS
 # TODO: Ick! We should avoid noise-code like this
 ananames = list(set([filter(lambda x:len(x)>1, i.split("/"))[0] for i in IHISTOS.keys()]))
 
+
 ## Read reference data histos
-import os, glob
+import os, sys, glob
 HISTOS = {}
 reffiles = glob.glob(os.path.join(RUNSDIR,  "*"))
 for rf in reffiles:
     HISTOS.update(prof.read_histos(rf))
 
-## Find things available in both
-available=[]
-for i in IHISTOS.keys():
-    for r in HISTOS.keys():
-        if i in r:
-            available.append([i,r])
+## Weight file parsing
+matchers = prof.read_pointmatchers(opts.WFILE) if opts.WFILE else None
 
-## Prepare list of ibins and databins --- order should be ok
-ibins = []
-databins = []
+
+## Find things available in both ipol and ref data, and in the weight file if there is one
+available = []
+for ihn in IHISTOS.keys():
+    ## Set default bin weights
+    for ib in IHISTOS[ihn].bins:
+        ib.w = 1.0
+    ## Find user-specified bin weights if there was a weight file
+    if matchers is not None:
+        ## Find matches
+        pathmatch_matchers = [(m,wstr) for m,wstr in matchers.iteritems() if m.match_path(ihn)]
+        ## Ditch histos not listed in the weight file
+        if not pathmatch_matchers:
+            del IHISTOS[ihn]
+            continue
+        ## Attach fit weights to the ibins, setting to zero if there's no position match
+        for ib in IHISTOS[ihn].bins:
+            posmatch_matchers = [(m,wstr) for (m,wstr) in pathmatch_matchers if m.match_pos(ib)]
+            ib.w = float(posmatch_matchers[-1][1]) if posmatch_matchers else 0 #< NB. using last match
+    for rhn in HISTOS.keys():
+        if ihn in rhn: #< short for rhn = "/REF/"+ihn ?
+            available.append([ihn,rhn])
+            break #< TODO: ok?
+
+
+## Prepare lists of ibins and dbins
+ibins, dbins = [], []
 for a in available:
-    ibins.extend(  IHISTOS[a[0]].bins)
-    databins.extend(HISTOS[a[1]].bins)
+    # TODO: print out the available observables
+    ibins.extend(IHISTOS[a[0]].bins)
+    dbins.extend( HISTOS[a[1]].bins)
 
 ## Sanity checks
-assert(len(ibins) == len(databins))
-
-if len(ibins)==0:
+assert(len(ibins) == len(dbins))
+if not ibins:
     print "No bins ..., exiting"
-    import sys
     sys.exit(1)
 
-weights=None
+
 def simpleGOF(params):
     """
-    Very straight forward gof
+    Very straightforward goodness-of-fit measure
     """
     chi2 = 0.0
     for num, ibin in enumerate(ibins):
+        ## Weight is attached to the ipol bin (default to 1.0)
+        w = ibin.w if hasattr(ibin, "w") else 1.0
+        ## Get ipol & ref bin values and compute their difference
         ival = ibin.val(params)
-        dval = databins[num].val
-        if ibin.ierrs is None:
-            err2 = databins[num].err**2
-        else:
-            err2 = sum([e**2 for e in ibin.ierrs])
-        if err2 == 0.0:
-            err2=1.
-            #continue
-        w=1
-        if weights is not None:
-            w=weights[num]
-            pass # do stuff
+        dval = dbins[num].val
         diff = dval - ival
+        ## Data error
+        err2 = dbins[num].err**2
+        ## Plus interpolation error added in quadrature
+        err2 += ibin.err(params)**2 # TODO: compute asymm error for appropriate deviation direction cf. sum([e**2 for e in ibin.ierrs])
+        if not err2:
+            raise prof.StatError("Zero uncertainty on a bin being used in the fit -- cannot compute a reasonable GoF")
+        # TODO: should we square w too, so it penalised deviations _linearly_?
         chi2 += w * diff**2 / err2
     return chi2
 
 
 ## Take parameter names directly from ifile
-mpnames = ["'%s'"%x for x in metadata["Params"].split()]
-
-## Fall back solution if empty
-#if len(mpnames)==0:
-mpnames = ["MP%03i"%(i) for i in xrange(int(metadata["Dimension"]))]
+mpnames = [x for x in metadata["ParamNames"].split()]
+## Fallback solution if empty
+if not mpnames:
+    mpnames = ["MP%03i" % (i) for i in xrange(int(metadata["Dimension"]))]
 
 ## Function definition wrapper
 funcdef = prof.mk_fitfunc("simpleGOF", mpnames)
@@ -118,17 +130,16 @@ if opts.DEBUG:
 
 
 ## Ignition
-# TODO: Use the internal iminuit/PyMinuit(2) wrapper
-from minuit2 import Minuit2 as Minuit
-minuit = Minuit(profGoF, strategy=2)
+minuit = prof.Minuit(profGoF)
+minuit.strategy = 2
 
 ## Starting point --- use center
+# TODO: Optionally make an initial brute force scan to choose the Minuit starting point
 C = []
-for num, m in enumerate(map(float, metadata["MinV"].split())):
-    C.append(m+0.5*(float(metadata["MaxV"].split()[num])-m))
+for num, m in enumerate(map(float, metadata["MinParamVals"].split())):
+    C.append(m + 0.5*(float(metadata["MaxParamVals"].split()[num])-m)) #< TODO: there's got to be a nicer way...
 for num, name in enumerate(mpnames):
     minuit.values[name] = C[num]
-
 
 ## Fix parameters, set limits
 limits, fixed = prof.read_limitsandfixed(opts.LIMITS)
@@ -145,16 +156,19 @@ minuit.migrad()
 ## Goodness of fit
 if not opts.QUIET:
     chi2 = minuit.fval
-    ndof = len(databins) - len(mpnames) + len(fixed.keys())
-    print "'chi2': %.2f"%chi2
-    print "Ndof  : %i"%ndof
-    print "G.o.f.: %.2f \n"%(chi2/ndof)
+    ndof = len(dbins) - len(mpnames) + len(fixed.keys())
+    # TODO: improve... chi2/Ndf isn't the GoF
+    print "'chi2': %.2f" % chi2
+    print "Ndf   : %i" % ndof
+    # print "G.o.F.: %.2f \n" % (chi2, chi2/ndof)
+
 
 ## Check if result is in validity range
 result = [minuit.values[p] for p in mpnames]
-rng_low = map(float, metadata["MinV"].split())
-rng_high = map(float, metadata["MaxV"].split())
+rng_low = map(float, metadata["MinParamVals"].split())
+rng_high = map(float, metadata["MaxParamVals"].split())
 rok, rng = prof.is_inrange(result, rng_low, rng_high)
+
 
 ## Print results to screen
 for num, p in enumerate(mpnames):
@@ -163,9 +177,9 @@ for num, p in enumerate(mpnames):
         print "%s\t%f"%(p, minuit.values[p])
     else:
         if p in fixed.keys():
-            isf="F"
+            isf = "F"
         if p in limits.keys():
-            isl="L"
+            isl = "L"
         if rok or not num in rng:
             print "%s\t%f\t%f\t%.2f %%   inside  (%f --- %f) %s %s"%(p, minuit.values[p], minuit.errors[p], 100*(minuit.errors[p]/minuit.values[p]), rng_low[num], rng_high[num], isf, isl)
         else:
@@ -197,6 +211,7 @@ with open("%s_results.txt" % opts.OUTPUT,"w") as f:
     for p in mpnames:
         f.write("%s\t%f\n" % (p, minuit.values[p]))
 
+
 ## Write out ipolhistos
 result = [minuit.values[name] for name in mpnames]
 with open("%s_ipolhistos.yoda" % opts.OUTPUT, "w") as f:
@@ -204,6 +219,7 @@ with open("%s_ipolhistos.yoda" % opts.OUTPUT, "w") as f:
         f.write(IHISTOS[k].toYODA(result, k))
         if num+1 < len(IHISTOS.keys()):
             f.write("\n")
+
 
 # ## Pull histograms
 # if opts.PULLS:
