@@ -1,4 +1,7 @@
 # -*- python -*-
 
+class StatError(Exception):
+    pass
+
 class IpolIOError(Exception):
     pass
